--- a/styles/feed-mobile.css
+++ b/styles/feed-mobile.css
@@ -208,9 +208,9 @@
 }
 
 .profile-details h1 {
-    font-family: 'Lato', sans-serif;
-    font-weight: 550;
-    font-size: 21px;
+    font-family: 'Geologica-VariableFont_CRSV,SHRP,slnt,wght', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
 }
 .activity-display{
     margin-bottom: 50px;
