--- a/styles/feed.css
+++ b/styles/feed.css
@@ -54,10 +54,10 @@ margin-left: 20px;
     margin-right: 20px;
 }
 .search{
+    position: relative;
 width: 400px;
 height: 44px;
-left: 384px;
-top: 22px;
+left: 150px;
 padding-left: 20px;
 border-radius: 10px;
 border: none;
@@ -192,8 +192,8 @@ header{
 }
 
 .nav-icons{
-    height: 35px;
-    width: 35px;
+    height: 30px;
+    width: 30px;
     margin-left: 30px;
 }
 
@@ -330,14 +330,14 @@ border-radius: 6px;
     font-family: 'Lato', sans-serif;
 }
 .profile-details h1{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato-SemiBold', sans-serif;
     font-weight: 500;
 font-size: 18px;
 }
 .profile-details p{
     font-weight: 400;
 font-size: 14px;
-font-family: 'Lato', sans-serif;
+font-family: 'Lato-Thin', sans-serif;
 
 }
 .clubs-display{
